Modified aboutMe. Renamed withLuke.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navigation-bar" aria-expanded="true">
             <ul class="navbar-nav ml-auto" id="navbar-toggle">
                 <li class="nav-item"><a class="nav-link" href="#"></a>Home</li>
-                <li class="nav-item"><a class="nav-link" href="#"></a>About</li>
+                <li class="nav-item"><a class="nav-link" href="aboutMe.html"></a>About</li>
                 <li class="nav-item"><a class="nav-link" href="#"></a>Thoughts</li>
                 <li class="nav-item"><a class="nav-link" href="#"></a>Favorites</li>
             </ul>
@@ -40,20 +40,36 @@
     <section class="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12">
                     <h3>A little about me</h3>
                     <div class="row">
                         <div class="col-sm-12">
-                            Left. Phone, tablet, desktop in front. Browser tabs, web pages, applications, all fighting. RSS feeds updating faster than you can scroll. All you are is left. 
+                            <p>
+                                <b>I like to share my opinion.</b>
+                                It’s rewarding when an idea helps encourage someone to think differently or feel more confident in decisions. Ideas aren’t always right but hey it’s the thought that counts.
+                                </br></br></br>
+                                
+                                <b>I’ve always been interested in hardware.</b>
+                                As a kid it was building with legos and Stephen Biesty’s Incredible Cross-Sections picture book. I enjoyed either direction. Building piece by piece or seeing the breakdown of something like the space shuttle chapter. 
+                                </br></br>
+
+                                I received an early lesson in design tradeoffs. Nintendo's Game Boy went from Amtrak train rides with AA batteries and a worm-like light attached to hurricane season with a rechargeable battery and no headphone jack...
+                                </br></br>
+
+                                I was late online. AOL, Xbox Live, MySpace, I was grounded in backyard sports. 
+                                </br></br></br>
+
+                                <b>I have been thinking more about software.</b>
+
+                                </br></br></br>
+
+
+                                <b>Some of my overarching questions...</b></br></br>
+                                <i>How digital luxury has taken over my brand perceptions. </i></br>
+                                <i>Does marketing become a subject of psychology or statistics?</i></br>
+                            </p>
                         </div>
                     </div>    
-                </div>
-                <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <img class="mx-auto d-block" src="/home/luke/Code/WebDev/HTML-CSS/Pictures/desktop.jpg" alt="desktop">
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
