Added thoughts.html, linked html sheets to each other.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="collapse navbar-collapse" id="navigation-bar" aria-expanded="true">
             <ul class="navbar-nav ml-auto" id="navbar-toggle">
                 <li class="nav-item"><a class="nav-link" href="#"></a>Home</li>
-                <li class="nav-item"><a class="nav-link" href="#"></a>About</li>
-                <li class="nav-item"><a class="nav-link" href="#"></a>Thoughts</li>
+                <li class="nav-item"><a class="nav-link" href="aboutMe.html"></a>About</li>
+                <li class="nav-item"><a class="nav-link" href="thoughts.html"></a>Thoughts</li>
                 <li class="nav-item"><a class="nav-link" href="#"></a>Favorites</li>
             </ul>
         </div>
