--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,9 +22,9 @@
 
         <div class="collapse navbar-collapse" id="navigation-bar" aria-expanded="true">
             <ul class="navbar-nav ml-auto" id="navbar-toggle">
-                <li class="nav-item"><a class="nav-link" href="#"></a>Home</li>
+                <li class="nav-item"><a class="nav-link" href="index.html"></a>Home</li>
                 <li class="nav-item"><a class="nav-link" href="aboutMe.html"></a>About</li>
-                <li class="nav-item"><a class="nav-link" href="#"></a>Thoughts</li>
+                <li class="nav-item"><a class="nav-link" href="thoughts.html"></a>Thoughts</li>
                 <li class="nav-item"><a class="nav-link" href="#"></a>Favorites</li>
             </ul>
         </div>
